[project]
name = "cooklangjp"
version = "0.1.0"
description = "Japanese-friendly Cooklang implementation using PLY"
authors = [
    { name = "Takashi" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/estakashi/cooklang_jp"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
